@@ -35,6 +35,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #13107: argparse and optparse no longer raises an exception when output
+  a help on environment with too small COLUMNS.  Based on patch by
+  Elazar Gershuni.
+
 - Issue #20207: Always disable SSLv2 except when PROTOCOL_SSLv2 is explicitly
   asked for.
 
